data/style.css
.rounded {
  border-radius: 20px;
}

.small-pill {
  border-radius: 60px;
}

.card-image {
  border-radius: 10px;
}

.small-image {
  border-radius: 4px;
}

.now-playing {
  background-color: alpha(@accent_bg_color, 0.1);
}

.now-playing .title-4 {
  color: @accent_color;
  font-weight: bold;
}

.card-bg {
  transition: opacity 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out;
  border-radius: 14px;
}

.card-bg:hover {
  background-color: alpha(var(--window-fg-color), 0.1);
}

.artist-link {
  color: #888;
}

.link-text {
  color: #888;
  text-decoration: underline;
  transition: color 0.3s ease-in-out;
  background-color: transparent;
  font-weight: normal;
}

.link-text:hover {
  color: #444;
}

.card-label {
  padding: 6px;
}

.artist-button {
  padding: 0px;
}

.play-btn {
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.artist-picture {
  border-radius: 100px;
}

.track-picture {
  border-radius: 12px;
}

.explicit-label {
  padding: 1px 5px;
  font-weight: bold;
  color: alpha(@window_fg_color, 0.7);
  background-color: alpha(@window_fg_color, 0.15);
  border-radius: 4px;
}

.lyrics-widget {
  background-color: transparent;
}

.lyrics-widget>row {
  background-color: transparent;
  padding: 0px;
}

.lyrics-widget>row label {
  transition: background-color 0.1s ease-in-out;
  font-weight: bold;
  font-size: 14pt;
  color: alpha(var(--view-fg-color), 0.5);
  border-radius: 12px;
  padding: 6px;
}

.lyrics-widget>row label:hover {
  background-color: alpha(var(--view-fg-color), 0.04);
}

.lyrics-widget>row:selected label {
  background-color: alpha(var(--view-fg-color), 0.07);
  color: var(--accent-color);
  padding-top: 24px;
  padding-bottom: 24px;
}

.lyrics-widget>row:selected:hover {
  color: alpha(var(--accent-color), 0.9);
}

.tracks-list-box {
  border-radius: 12px;
  background-color: transparent;
}

.tracks-list-box row {
  border-radius: 12px;
  background-color: transparent;
  transition: background-color 0.1s ease-in-out;
}

.tracks-list-box row:nth-child(odd) {
  background-color: alpha(var(--window-fg-color), 0.05);
}

.tracks-list-box row:hover {
  background-color: alpha(var(--window-fg-color), 0.1);
}

.quality-label {
  background-color: var(--popover-shade-color);
  border-radius: 4px;
  padding: 3px;
  padding-left: 6px;
  padding-right: 6px;
}

.sidebar-progress-bar trough { /* codespell:ignore trough */
  border-radius:0px;
  background-color: transparent;
}

.sidebar-progress-bar trough > progress { /* codespell:ignore trough */
  border-radius:0px;
  background-color:alpha(var(--window-fg-color), 0.05);
}

dropdown button:not(:hover) {
  background-color: transparent;
}

